--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,11 +6,15 @@ authors = ["Mirko Lenz <info@mirko-lenz.de>"]
 
 [tool.poetry.dependencies]
 python = "^3.7"
-argument-graph = "^1.0"
+recap-argument-graph = "^0.1.0"
 click = "^7.0"
+tomlkit = "^0.5.8"
+recap-argument-graph-translator = "^0.1.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^3.0"
+mypy = "^0.761"
+pylint = "^2.4.4"
 
 [build-system]
 requires = ["poetry>=0.12"]
