--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "ReCAP-Utils"
-version = "0.1.4"
+version = "0.1.5"
 description = ""
 authors = ["Mirko Lenz <info@mirko-lenz.de>"]
 
@@ -12,8 +12,8 @@ python = "^3.7"
 recap-argument-graph = "^0.1.0"
 click = "^7.0"
 tomlkit = "^0.5.8"
-recap-argument-graph-translator = "^0.1.1"
 click-pathlib = "^2019.12.28"
+deepl-pro = "^0.1.4"
 
 [tool.poetry.dev-dependencies]
 pytest = "^3.0"
