--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "arguebuf-cli"
 version = "1.1.2"
-description = ""
+description = "Command line interface for interacting with argument graphs."
 authors = ["Mirko Lenz <info@mirko-lenz.de>"]
 license = "MIT"
 readme = "README.md"
